personal website improveed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
+    <!-- Link To JS -->
+    <script defer src="./js/script.js"></script>
   </head>
   <body>
     <!-- Navbar -->
@@ -318,7 +320,6 @@
       <p>Create By <a href="#">Lins Thomas</a> | All Right Reserved.</p>
     </div>
 
-    <!-- Link To JS -->
-    <script src="./js/script.js"></script>
+    
   </body>
 </html>
