--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div class="bx bx-menu" id="menu-icon"></div>
 
       <ul class="navbar">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <div class="bx bx-moon" id="darkmode"></div>
+        <li><a href="#home" aria-label="home"a>Home</a></li>
+        <li><a href="#about" aria-label="about">About</a></li>
+        <li><a href="#skills" aria-label="skills">Skills</a></li>
+        <li><a href="#services" aria-label="services">Services</a></li>
+        <li><a href="#portfolio" aria-label="portfolio">Portfolio</a></li>
+        <li><a href="#contact" aria aria-label="contact">Contact</a></li>
+        <div class="bx bx-moon" aria-label="darkmode" id="darkmode"></div>
       </ul>
     </header>
     <!-- Home -->
