personal website improveed

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
       <a href="#" class="logo"><strong>Lins Thomas</strong></a>
 
       <div class="bx bx-menu" id="menu-icon"></div>
-
-      <ul class="navbar">
-        <li><a href="#home" aria-label="home"a>Home</a></li>
-        <li><a href="#about" aria-label="about">About</a></li>
-        <li><a href="#skills" aria-label="skills">Skills</a></li>
-        <li><a href="#services" aria-label="services">Services</a></li>
-        <li><a href="#portfolio" aria-label="portfolio">Portfolio</a></li>
-        <li><a href="#contact" aria aria-label="contact">Contact</a></li>
-        <div class="bx bx-moon" aria-label="darkmode" id="darkmode"></div>
-      </ul>
+      <nav>
+        <ul class="navbar">
+          <li><a href="#home" aria-label="home" a>Home</a></li>
+          <li><a href="#about" aria-label="about">About</a></li>
+          <li><a href="#skills" aria-label="skills">Skills</a></li>
+          <li><a href="#services" aria-label="services">Services</a></li>
+          <li><a href="#portfolio" aria-label="portfolio">Portfolio</a></li>
+          <li><a href="#contact" aria aria-label="contact">Contact</a></li>
+          <div class="bx bx-moon" aria-label="darkmode" id="darkmode"></div>
+        </ul>
+      </nav>
     </header>
     <!-- Home -->
 
@@ -251,7 +252,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="contact" id="contact">
       <div class="heading">
         <h2>Contact</h2>
@@ -298,7 +299,5 @@
     <div class="copyright">
       <p>Create By <a href="#">Lins Thomas</a> | All Right Reserved.</p>
     </div>
-
-    
   </body>
 </html>
