personal website improveed

--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
       </div>
       <div class="portfolio-content">
         <div class="portfolio-img">
-          <img src="./image/net.png" alt="" />
+          <img src="./image/net.png" alt="img" />
           <div class="portfolio-btn">
             <a
               href="https://netflixwebsitee.netlify.app/"
               target="_blank"
               class="btn"
-              >Demo</a
+              >Netflix Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/Netflix_clone_ui"
@@ -223,7 +223,7 @@
               href="https://linsthomas-portfolio.netlify.app/"
               target="_blank"
               class="btn"
-              >Demo</a
+              >Portfolio Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/New_portfolio"
@@ -240,7 +240,7 @@
               href="https://restaurant-listing-website.netlify.app/"
               target="_blank"
               class="btn"
-              >Demo</a
+              >Restaurant Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/Resturant_project"
