--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         ></a>
       </div>
       <div class="home-img">
-        <img src="./image/lins_home.JPG" alt="" />
+        <img src="./image/lins_home.webp" alt="" />
       </div>
       <div class="home-text">
         <span>Hello, I'm</span>
@@ -77,7 +77,7 @@
       <!-- About Content -->
       <div class="about-container">
         <div class="about-img">
-          <img src="./image/lins_about.JPG" alt="" />
+          <img src="./image/lins_about.webp" alt="" />
         </div>
         <div class="about-text">
           <p>
@@ -161,7 +161,7 @@
           </div>
         </div>
         <div class="skills-img">
-          <img src="./image/123.png" alt="" />
+          <img src="./image/123.webp" alt="img" />
         </div>
       </div>
     </section>
@@ -200,7 +200,7 @@
       </div>
       <div class="portfolio-content">
         <div class="portfolio-img">
-          <img src="./image/net.png" alt="img" />
+          <img src="./image/net.webp" alt="img" />
           <div class="portfolio-btn">
             <a
               href="https://netflixwebsitee.netlify.app/"
@@ -217,7 +217,7 @@
           </div>
         </div>
         <div class="portfolio-img">
-          <img src="./image/portfolio6.PNG" alt="" />
+          <img src="./image/portfolio6.webp" alt="" />
           <div class="portfolio-btn">
             <a
               href="https://linsthomas-portfolio.netlify.app/"
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="portfolio-img">
-          <img src="./image/portfolio7.PNG" alt="" />
+          <img src="./image/portfolio7.webp" alt="" />
           <div class="portfolio-btn">
             <a
               href="https://restaurant-listing-website.netlify.app/"
