personal website improveed

--- a/index.html
+++ b/index.html
@@ -37,20 +37,28 @@
 
     <section class="home" id="home">
       <div class="social">
-        <a href="https://github.com/Lins-Thomas-au45" target="_blank"
+        <a
+          href="https://github.com/Lins-Thomas-au45"
+          aria-label="github link"
+          target="_blank"
           ><i class="bx bxl-github"></i
         ></a>
         <a
           href="https://www.linkedin.com/in/lins-thomas-6b6b501b6/"
+          aria-label="linkedln link"
           target="_blank"
           ><i class="bx bxl-linkedin-square"></i
         ></a>
         <a
           href="https://www.facebook.com/profile.php?id=100073611901657"
+          aria-label="facebook link"
           target="_blank"
           ><i class="bx bxl-meta"></i
         ></a>
-        <a href="https://www.instagram.com/raphealins/" target="_blank"
+        <a
+          href="https://www.instagram.com/raphealins/"
+          target="_blank"
+          aria-label="instagram link"
           ><i class="bx bxl-instagram"></i
         ></a>
       </div>
@@ -65,7 +73,9 @@
           "Crafting web-app solutions, from front-end design to back-end
           functionality, for seamless user experiences and robust systems."
         </p>
-        <a href="#contact" class="btn">Contact Me</a>
+        <a href="#contact" class="btn" aria-label="link to contact section"
+          >Contact Me</a
+        >
       </div>
     </section>
     <!-- About -->
@@ -109,7 +119,11 @@
               <span>raphealins@gmail.com</span>
             </div>
           </div>
-          <a href="./cv/Lins_Thomas_CV.pdf" target="_blank" class="btn"
+          <a
+            href="./cv/Lins_Thomas_CV.pdf"
+            target="_blank"
+            aria-label="link to resume"
+            class="btn"
             >Download CV</a
           >
         </div>
@@ -176,13 +190,13 @@
         <div class="services-box">
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
-          <a href="#">Contact Me</a>
+          <a href="#contact" aria-label="Link to contact">Contact Me</a>
         </div>
         <!-- Box 2 -->
         <div class="services-box">
           <i class="bx bx-server"></i>
           <h3>Backend Development</h3>
-          <a href="#">Contact Me</a>
+          <a href="#contact" aria-label="Link to contact">Contact Me</a>
         </div>
         <!-- Box 3 -->
         <div class="services-box">
@@ -205,12 +219,14 @@
             <a
               href="https://netflixwebsitee.netlify.app/"
               target="_blank"
+              aria-label="Link to netflix clone website"
               class="btn"
               >Netflix Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/Netflix_clone_ui"
               target="_blank"
+              aria-label="Link to github account"
               class="btn"
               >Github</a
             >
@@ -222,29 +238,33 @@
             <a
               href="https://linsthomas-portfolio.netlify.app/"
               target="_blank"
+              aria-label="Link to portfolio website"
               class="btn"
               >Portfolio Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/New_portfolio"
               target="_blank"
+              aria-label="Link to github account"
               class="btn"
               >Github</a
             >
           </div>
         </div>
         <div class="portfolio-img">
-          <img src="./image/portfolio7.webp" alt="" />
+          <img src="./image/portfolio7.webp" alt="img" />
           <div class="portfolio-btn">
             <a
               href="https://restaurant-listing-website.netlify.app/"
               target="_blank"
+              aria-label="Link to resturant website"
               class="btn"
               >Restaurant Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/Resturant_project"
               target="_blank"
+              aria-label="Link to githuub account"
               class="btn"
               >Github</a
             >
@@ -280,17 +300,25 @@
         <a
           href="https://www.facebook.com/profile.php?id=100073611901657"
           target="_blank"
+          aria-label="Link to face book"
           ><i class="bx bxl-facebook"></i
         ></a>
         <a
           href="https://www.linkedin.com/in/lins-thomas-6b6b501b6/"
           target="_blank"
+          aria-label="Link to Linkedln"
           ><i class="bx bxl-linkedin-square"></i
         ></a>
-        <a href="https://www.instagram.com/raphealins/" target="_blank"
+        <a
+          href="https://www.instagram.com/raphealins/"
+          target="_blank"
+          aria-label="Link to instagram"
           ><i class="bx bxl-instagram"></i
         ></a>
-        <a href="https://github.com/Lins-Thomas-au45" target="_blank"
+        <a
+          href="https://github.com/Lins-Thomas-au45"
+          target="_blank"
+          aria-label="Link to github"
           ><i class="bx bxl-github"></i
         ></a>
       </div>
