--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <div class="bx bx-menu" id="menu-icon"></div>
       <nav>
         <ul class="navbar">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home" aria-label="Link to home section">Home</a></li>
+          <li><a href="#about" aria-label="Link to about section">About</a></li>
+          <li><a href="#skills" aria-label="Link to skills section">Skills</a></li>
+          <li><a href="#services" aria-label="Link to services section">Services</a></li>
+          <li><a href="#portfolio" aria-label="Link to portfolio section">Portfolio</a></li>
+          <li><a href="#contact" aria-label="Link to contact section">Contact</a></li>
           <div class="bx bx-moon" id="darkmode"></div>
         </ul>
       </nav>
