personal website improveed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
     <!-- Link To JS -->
-    <script defer src="./js/script.js"></script>
+    
   </head>
   <body>
     <!-- Navbar -->
@@ -33,6 +33,7 @@
         </ul>
       </nav>
     </header>
+    <main>
     <!-- Home -->
 
     <section class="home" id="home">
@@ -63,7 +64,7 @@
         ></a>
       </div>
       <div class="home-img">
-        <img src="./image/lins_home.webp" alt="" />
+        <img src="./image/lins_home.webp" alt="img" />
       </div>
       <div class="home-text">
         <span>Hello, I'm</span>
@@ -78,6 +79,8 @@
         >
       </div>
     </section>
+  </main>
+  <main>
     <!-- About -->
     <section class="about" id="about">
       <div class="heading">
@@ -87,7 +90,7 @@
       <!-- About Content -->
       <div class="about-container">
         <div class="about-img">
-          <img src="./image/lins_about.webp" alt="" />
+          <img src="./image/lins_about.webp" alt="img" />
         </div>
         <div class="about-text">
           <p>
@@ -129,7 +132,9 @@
         </div>
       </div>
     </section>
+  </main>
     <!-- Skills -->
+    <main>
     <section class="skills" id="skills">
       <div class="heading">
         <h2>Skills</h2>
@@ -179,7 +184,9 @@
         </div>
       </div>
     </section>
+  </main>
     <!-- Services -->
+    <main>
     <section class="services" id="services">
       <div class="heading">
         <h2>Services</h2>
@@ -233,7 +240,7 @@
           </div>
         </div>
         <div class="portfolio-img">
-          <img src="./image/portfolio6.webp" alt="" />
+          <img src="./image/portfolio6.webp" alt="img" />
           <div class="portfolio-btn">
             <a
               href="https://linsthomas-portfolio.netlify.app/"
@@ -272,7 +279,9 @@
         </div>
       </div>
     </section>
-
+  </main>
+  <!--contact-->
+  <main>
     <section class="contact" id="contact">
       <div class="heading">
         <h2>Contact</h2>
@@ -294,7 +303,9 @@
         </form>
       </div>
     </section>
+  </main>
     <!-- Footer -->
+    <footer>
     <div class="footer">
       <div class="footer-social">
         <a
@@ -323,9 +334,12 @@
         ></a>
       </div>
     </div>
+  
     <!-- Copyright -->
     <div class="copyright">
       <p>Create By <a href="#">Lins Thomas</a> | All Right Reserved.</p>
     </div>
+  </footer>
+    <script defer src="./js/script.js"></script>
   </body>
 </html>
