personal website improveed

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <div class="bx bx-menu" id="menu-icon"></div>
       <nav>
         <ul class="navbar">
-          <li><a href="#home" aria-label="Link to home section">Home</a></li>
-          <li><a href="#about" aria-label="Link to about section">About</a></li>
-          <li><a href="#skills" aria-label="Link to skills section">Skills</a></li>
-          <li><a href="#services" aria-label="Link to services section">Services</a></li>
-          <li><a href="#portfolio" aria-label="Link to portfolio section">Portfolio</a></li>
-          <li><a href="#contact" aria-label="Link to contact section">Contact</a></li>
+          <li><a href="#home" aria-label="Home">Home</a></li>
+          <li><a href="#about" aria-label="About">About</a></li>
+          <li><a href="#skills" aria-label="Skills">Skills</a></li>
+          <li><a href="#services" aria-label="Services">Services</a></li>
+          <li><a href="#portfolio" aria-label="Portfolio">Portfolio</a></li>
+          <li><a href="#contact" aria-label="Contact">Contact</a></li>
           <div class="bx bx-moon" id="darkmode"></div>
         </ul>
       </nav>
@@ -74,7 +74,7 @@
           "Crafting web-app solutions, from front-end design to back-end
           functionality, for seamless user experiences and robust systems."
         </p>
-        <a href="#contact" class="btn" aria-label="link to contact section"
+        <a href="#contact" class="btn" aria-label=" Contact Me"
           >Contact Me</a
         >
       </div>
@@ -125,7 +125,7 @@
           <a
             href="./cv/Lins_Thomas_CV.pdf"
             target="_blank"
-            aria-label="link to resume"
+            aria-label="Download CV"
             class="btn"
             >Download CV</a
           >
@@ -197,19 +197,19 @@
         <div class="services-box">
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
-          <a href="#contact" aria-label="Link to contact">Contact Me</a>
+          <a href="#contact" aria-label="Contact Me">Contact Me</a>
         </div>
         <!-- Box 2 -->
         <div class="services-box">
           <i class="bx bx-server"></i>
           <h3>Backend Development</h3>
-          <a href="#contact" aria-label="Link to contact">Contact Me</a>
+          <a href="#contact" aria-label="Contact Me">Contact Me</a>
         </div>
         <!-- Box 3 -->
         <div class="services-box">
           <i class="bx bx-brush"></i>
           <h3>UI/UX Design</h3>
-          <a href="#">Contact Me</a>
+          <a href="#contact" aria-label="Contact /me">Contact Me</a>
         </div>
       </div>
     </section>
@@ -226,14 +226,14 @@
             <a
               href="https://netflixwebsitee.netlify.app/"
               target="_blank"
-              aria-label="Link to netflix clone website"
+              aria-label="Netflix Demo"
               class="btn"
               >Netflix Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/Netflix_clone_ui"
               target="_blank"
-              aria-label="Link to github account"
+              aria-label="Github"
               class="btn"
               >Github</a
             >
@@ -245,14 +245,14 @@
             <a
               href="https://linsthomas-portfolio.netlify.app/"
               target="_blank"
-              aria-label="Link to portfolio website"
+              aria-label="Portfolio"
               class="btn"
               >Portfolio Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/New_portfolio"
               target="_blank"
-              aria-label="Link to github account"
+              aria-label="Github"
               class="btn"
               >Github</a
             >
@@ -264,14 +264,14 @@
             <a
               href="https://restaurant-listing-website.netlify.app/"
               target="_blank"
-              aria-label="Link to resturant website"
+              aria-label="Restaurant Demo"
               class="btn"
               >Restaurant Demo</a
             >
             <a
               href="https://github.com/Lins-Thomas-au45/Resturant_project"
               target="_blank"
-              aria-label="Link to githuub account"
+              aria-label="Github"
               class="btn"
               >Github</a
             >
@@ -311,7 +311,7 @@
         <a
           href="https://www.facebook.com/profile.php?id=100073611901657"
           target="_blank"
-          aria-label="Link to face book"
+          aria-label="Link to facebook"
           ><i class="bx bxl-facebook"></i
         ></a>
         <a
@@ -337,7 +337,7 @@
   
     <!-- Copyright -->
     <div class="copyright">
-      <p>Create By <a href="#">Lins Thomas</a> | All Right Reserved.</p>
+      <p>Create By <a href="#" aria-label="Lins Thomas">Lins Thomas</a> | All Right Reserved.</p>
     </div>
   </footer>
     <script defer src="./js/script.js"></script>
