personal website improveed

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
   
     <!-- Copyright -->
     <div class="copyright">
-      <p>Create By <a href="#" aria-label="Lins Thomas">Lins Thomas</a> | All Right Reserved.</p>
+      <p>Create By <a href="#" style="text-decoration: underline; color: rgb(7, 7, 8);" aria-label="Lins Thomas"><strong>Lins Thomas</strong></a> | All Right Reserved.</p>
     </div>
   </footer>
     <script defer src="./js/script.js"></script>
