personal website improveed

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <a
               href="https://linsthomas-portfolio.netlify.app/"
               target="_blank"
-              aria-label="Portfolio"
+              aria-label="Portfolio Demo"
               class="btn"
               >Portfolio Demo</a
             >
